modules/gcp-cluster/manifests/external-gateway-http-to-https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${gateway_name}
  namespace: ${gateway_namespace}
spec:
  parentRefs:
  - name: ${gateway_name}
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
